Fix overflow and remove margin on footer logo

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -10,7 +10,6 @@ footer {
 .grin-logo-footer {
   height: 64px;
   display: flex;
-  margin-right: $base;
 }
 .footer-section {
   min-width: 150px;
